tests/NormalTests/paczka1/fuzzy1/49247524.err
Error in line 4: R3Wsy9bnu A400 90,5
Error in line 7: R3Wsy9bnu A743 0,0
Error in line 11: TUBuLGeLAb S102 0,7
Error in line 3: hEVY5oIXj6 S102 59,8
Error in line 25: hEVY5oIXj6 S544 67,9
Error in line 32: jSCglX86I A400 -4,4
Error in line 35: UUIkKfQ A400 17,9
